# RustyBot

./: Cargo.toml  targets-bak.json  targets.json
src/: main.rs
