[package]
name = "RustyBot"
version = "0.1.0"
authors = ["Malte Vrampe <athrunen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
serde_json = "1.0.64"
thirtyfour = "0.24.0"
tokio = {version = "1.5.0", features = ["full"]}
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.8.3"